List.of is new to JDK 9
Signed-off-by: Ceki Gulcu <ceki@qos.ch>